[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/img/sprites/PowerUps/Life.png" type="Texture" id=1]
[ext_resource path="res://models/PowerUps/LifePowerUp.gd" type="Script" id=2]
[ext_resource path="res://models/Partic/ParticleDest.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0312

[node name="LifePowerUp" type="Node2D"]
script = ExtResource( 2 )

[node name="Particles2D" parent="." instance=ExtResource( 3 )]
position = Vector2( -5.96046e-08, -1.78814e-07 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.5, -1 )
scale = Vector2( 0.525, 0.469 )
texture = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
